<resources>
    <string name="app_name">StockApp</string>
    <string name="button">Button</string>
    <string name="login">Логин</string>
    <string name="pass">Пароль</string>
    <string name="AccessLevel">Уровень доступа:</string>
    <string name="WorkWithProduction">Работа с продукцией</string>
    <string name="WWOperators">Работа с операторами</string>
    <string name="Unlog">Разлогиниться</string>
    <string name="SearchProduct">Напишите название товара...</string>
    <string name="Clear">Очистить</string>
    <string name="Search">Поиск</string>
    <string name="ProdIDmanga">ID продукта в базе данных:</string>
    <string name="tv1">Дата поставки на склад:</string>
    <string name="tv3">Количество на складе:</string>
    <string name="tv6">Вес продукта:</string>
    <string name="tv9">Полка:</string>
    <string name="LocationPart">Месторасположение</string>
    <string name="tv7">Ряд:</string>
    <string name="tv2">ID ответственного оператора:</string>
    <string name="tv4">Срок реализации продукции:</string>
    <string name="DelProdBut">УДАЛИТЬ ТОВАР</string>
    <string name="AboutProdBut">ИЗМЕНИТЬ ИНФОРМАЦИЮ О ТОВАРЕ</string>
    <string name="tv8">Стелаж:</string>
    <string name="Change">Подтвердить изменения</string>
    <string name="IDWK">Номер весовой категории:</string>
    <string name="AddProdBut">Добавить новый продукт в базу</string>
    <string name="add">Добавить</string>
    <string name="ProdTitle">Наименование товара:</string>
    <string name="authorization">Авторизоваться</string>
    <string name="SearchOperator">Поиск сотрудника по ФИО...</string>
    <string name="createOpAcc">Создать новый аккаунт оператора</string>
    <string name="Submit">Подтвердить изменение параметров аккаунта</string>
    <string name="WorkDays">Рабочие дни:</string>
    <string name="WorkShift">Рабоча смена:</string>
    <string name="Login">Логин:</string>
    <string name="Password">Пароль:</string>
    <string name="FIO">ФИО оператора:</string>
    <string name="Op_id_in_db">ID operatora в базе данных:</string>
    <string name="RedOpInf">Измененить параметры аккаунта</string>
    <string name="CreateAccount">СОЗДАТЬ АККАУНТ</string>
    <string name="adddddd">Создать аккаунт</string>
    <string name="sort">Сорт.</string>

    <string-array name="opList">
        <item>по ID↑</item>
        <item>по ID↓</item>
        <item>по имени↑</item>
        <item>по имени↓</item>
    </string-array>
    <string-array name="prodList">
        <item>по ID↑</item>
        <item>по ID↓</item>
        <item>по названию↑</item>
        <item>по названию↓</item>
    </string-array>
</resources>
