<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductsCatagol">

    <EditText
        android:id="@+id/editTextSearch"
        style="@android:style/Widget.EditText"
        android:layout_width="381dp"
        android:layout_height="51dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/SearchProduct"
        android:inputType="textUri"
        android:singleLine="false"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ClearButton"
        android:layout_width="161dp"
        android:layout_height="73dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="5dp"
        android:text="@string/Clear"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toStartOf="@+id/button4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSearch" />

    <Button
        android:id="@+id/button4"
        android:layout_width="161dp"
        android:layout_height="73dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="16dp"
        android:text="@string/Search"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ClearButton"
        app:layout_constraintTop_toBottomOf="@+id/editTextSearch" />

</androidx.constraintlayout.widget.ConstraintLayout>